--- a/room.html
+++ b/room.html
@@ -9,6 +9,7 @@
     <!-- CSS -->
     <link rel="stylesheet" href="styles/global.css">
     <link rel="stylesheet" href="styles/room.css">
+    <link rel="stylesheet" href="styles/modal.css">
     <!-- FONTS-->
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins:wght@400;500;700&display=swap" rel="stylesheet">
@@ -55,7 +56,7 @@
             <div class="question-wrapper">
               <div class="question-content">
                 <div class="user">
-                  <img src="assets/avatar.svg" alt="Avatar">
+                  <img src="assets/user.svg" alt="Avatar">
                 </div>
                 <div class="question">
                   <p>Qual a diferença entre const, var e let no Javascript?</p>
@@ -72,11 +73,85 @@
                 </a>
               </div>
             </div>
+            <div class="question-wrapper">
+              <div class="question-content">
+                <div class="user">
+                  <img src="assets/user.svg" alt="Avatar">
+                </div>
+                <div class="question">
+                  <p>O que é Javascript?</p>
+                </div>
+              </div>
+              <div class="actions">
+                <a href="#" class="check">
+                  <img src="assets/check.svg" alt="Marcar como lida">
+                  Marcar como lida
+                </a>
+                <a href="#" class="delete">
+                  <img src="assets/trash.svg" alt="Excluir">
+                  Excluir
+                </a>
+              </div>
+            </div>
+            <div class="question-wrapper">
+              <div class="question-content">
+                <div class="user">
+                  <img src="assets/user.svg" alt="Avatar">
+                </div>
+                <div class="question">
+                  <p>Você já sabe quais as bases você precisa melhorar para alcançar o seu próximo nível com maestria? Definiu seu foco e objetivo para seguir em frente? Estou curiosa e embasbacada com sua perseverança por ter alcançado a terceira aula e sei que vai continuar ate o fim, então responde ai pra gente!!</p>
+                </div>
+              </div>
+              <div class="actions">
+                <a href="#" class="check">
+                  <img src="assets/check.svg" alt="Marcar como lida">
+                  Marcar como lida
+                </a>
+                <a href="#" class="delete">
+                  <img src="assets/trash.svg" alt="Excluir">
+                  Excluir
+                </a>
+              </div>
+            </div>
+            <div class="question-wrapper read">
+              <div class="question-content">
+                <div class="user">
+                  <img src="assets/user.svg" alt="Avatar">
+                </div>
+                <div class="question">
+                  <p>o que é TypeScript?</p>
+                </div>
+              </div>
+              <div class="actions">
+                <a href="#" class="delete">
+                  <img src="assets/trash.svg" alt="Excluir">
+                  Excluir
+                </a>
+              </div>
+            </div>
           </div>
 
         </section>
       </main>
 
+    </div>
+    <!---- MODAL ----->
+    <div class="modal-wrapper">
+      <div class="modal">
+        <h2>Excluir pergunta</h2>
+        <p>Tem certeza que você deseja excluir esta pergunta?</p>
+
+        <form action="#">
+          <label class="sr-only" for-is="password">Digite sua senha admin</label>
+          <input type="password" id="password" name="password" placeholder="Digite sua senha" />
+
+          <div class="buttons">
+            <div class="button grey">Cancelar</div>
+            <button class="red">Sim, Excluir</button>
+          </div>
+        </form>
+        
+      </div>
     </div>
 
   </body>
